# r-pkg

./: Cargo.toml  README.md
src/: aur.rs  core.rs  lib.rs  main.rs  pacman.rs
