[package]
name = "pkg"
version = "0.1.0"
edition = "2022"
authors = ["r-core"]
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pkg"
path = "src/lib.rs"

[dependencies]
git2 = "0.13"
clap = { version = "3.1.18", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
ansi_term = "0.12.1"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.